# ontology-kg-builder

./: .env.example  .gitignore  CLAUDE.md  README.md  RELEASE_NOTES.md  pyproject.toml
analysis/: analysis_writeup.md  architecture.md  fltca_gap_analysis_20260609.md  fltca_qa_assessment.md  fltca_qa_assessment_v2.md  instance_system_prompt_snapshot.md  ontology_reference.md  ontology_reference_v2.md  performance_analysis.md  retrieval_quality_investigation.md  roadmap.md  test_plan.md
eval/: README.md  groundtruth.py  instance_ab.py  judge.py  main.py  metrics_log.py  models.py  query_ab.py  questions.py
eval/groundtruth/: faa.json  fltca.json
ingest/: domain_vocab.py  main.py  tools.py
ingest/agents/: enhancer_agent.py  instance_agent.py  ontology_agent.py
query/: agent.py  main.py  tools.py
scripts/: cost_watch.py
shared/: cache_check.py  document.py  neo4j_tools.py  strands_anthropic.py
