[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ontology-based-kg"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "strands-agents[anthropic]",
    "strands-agents-tools",
    "pydantic>=2.0",
    "python-dotenv",
    "neo4j>=5.0",
    "pdfplumber",
    "beautifulsoup4",
    "anthropic",
    "mcp-neo4j-cypher",
]

[tool.setuptools.packages.find]
include = ["shared*", "ingest*", "query*"]
